@@ -1,3 +1,8 @@
+Thu Mar 04 16:39:51 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* utils/verify_cache.py: Add a utility to verify the integrity of a
+	  cache.
+
 Wed Feb 24 10:26:38 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* xappy/datastructures.py,xappy/unittests/calc_hash.py: Add a
